--- a/index.html
+++ b/index.html
@@ -3,463 +3,283 @@
 <head>
 <meta charset="utf-8">
 <title>Mappa Verona – SpG</title>
-
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
 
 <style>
-html, body {
-  margin: 0;
-  height: 100%;
-  background: #000;
-  font-family: system-ui, sans-serif;
-}
-#map { position:absolute; inset:0; background:#050505; }
+html,body{margin:0;height:100%;background:#000;font-family:system-ui}
+#map{position:absolute;inset:0}
 
 /* HUD */
-#hud {
-  position: fixed;
-  top: 18px;
-  left: 18px;
-  z-index: 9999;
-  padding: 14px 16px;
-  background: rgba(5,5,5,.94);
-  border-left: 4px solid #00ff9c;
-  min-width: 340px;
-  box-shadow: 0 0 20px rgba(0,0,0,.85);
+#hud{
+ position:fixed;top:16px;left:16px;z-index:9999;
+ width:380px;padding:14px;
+ background:rgba(5,5,5,.94);
+ border-left:4px solid #00ff9c;
+ box-shadow:0 0 25px rgba(0,0,0,.85)
+}
+.hud-title{color:#fff;font-size:18px;font-weight:650;text-transform:uppercase}
+.hud-sub{color:#bbb;font-size:13px}
+
+/* bottoni */
+.buttons{margin-top:10px;display:flex;gap:6px}
+button{
+ background:#041812;border:1px solid #00ff9c;
+ color:#eafff7;font-size:11px;
+ padding:4px 8px;cursor:pointer
+}
+button:hover{background:#00ff9c;color:#00110b}
+
+/* referenti */
+#refPanel{display:none;margin-top:6px;font-size:12px;color:#fff}
+
+/* sezioni */
+.section{margin-top:12px;border-top:1px solid #222;padding-top:8px}
+
+/* LEGENDA */
+.legend h4{
+ margin:4px 0 6px;
+ font-size:11px;
+ text-transform:uppercase;
+ letter-spacing:.12em;
+ color:#9ef5d9
+}
+.legend-row{
+ display:flex;
+ align-items:center;
+ gap:8px;
+ font-size:11px;
+ margin:4px 0;
+ color:#e6e6e6
 }
 
-.hud-title {
-  font-size: 18px;
-  font-weight: 650;
-  color: #fff;
-  text-transform: uppercase;
+/* simboli */
+.dot{width:12px;height:12px;border-radius:50%}
+.triangle{
+ width:0;height:0;
+ border-left:7px solid transparent;
+ border-right:7px solid transparent;
+ border-bottom:12px solid
 }
-.hud-sub {
-  margin-top: 6px;
-  font-size: 13px;
-  color: #bdbdbd;
-}
-
-/* contatori comuni */
-#stats {
-  margin-top: 12px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 8px;
-}
-.stat {
-  background: #0e0e0e;
-  padding: 8px;
-}
-.stat-title {
-  font-size: 10px;
-  text-transform: uppercase;
-  letter-spacing: .12em;
-}
-.stat-value {
-  font-size: 26px;
-  font-weight: 700;
-}
-.stat-ok .stat-value { color:#00ff9c; }
-.stat-warn .stat-value { color:#ffaa00; }
-
-/* farmacie */
-#farm-box {
-  margin-top: 14px;
-  padding-top: 10px;
-  border-top: 1px solid #222;
-}
-#farm-box h4 {
-  margin: 0 0 6px;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: .12em;
-  color: #9ef5d9;
-}
-#farm-count {
-  font-size: 12px;
-  margin-bottom: 6px;
-}
-
-/* legenda farmacie */
-.legend-row {
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  font-size: 11px;
-  margin-bottom: 2px;
-}
-.dot {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-}
-.triangle {
-  width: 0; height: 0;
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-bottom: 12px solid;
+.cross{
+ font-weight:900;
+ font-size:14px;
+ line-height:12px
 }
 
 /* colori stato */
-.accetta { background:#00ff9c; border-bottom-color:#00ff9c; }
-.in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff; }
-.da_contattare { background:#ffaa00; border-bottom-color:#ffaa00; }
-.rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d; }
-
-/* buttons */
-.hud-buttons {
-  margin-top: 12px;
-  display: flex;
-  gap: 6px;
-}
-.hud-btn {
-  border:1px solid #00ff9c;
-  background:#041812;
-  color:#eafff7;
-  font-size:11px;
-  padding:4px 8px;
-  cursor:pointer;
-}
-.hud-btn:hover {
-  background:#00ff9c;
-  color:#00110b;
-}
-
-/* referenti */
-.hud-section {
-  margin-top: 10px;
-  border-top: 1px solid #222;
-  padding-top: 6px;
-  display: none;
-}
-.hud-section li {
-  font-size: 12px;
-  color: #fff;
-}
+.partecipa{background:#00ff9c;border-bottom-color:#00ff9c;color:#00ff9c}
+.trattativa{background:#4da6ff;border-bottom-color:#4da6ff;color:#4da6ff}
+.contattare{background:#ffaa00;border-bottom-color:#ffaa00;color:#ffaa00}
+.rifiuta{background:#ff4d4d;border-bottom-color:#ff4d4d;color:#ff4d4d}
 
 /* label comuni */
-.label-comune {
-  color: #ffffff;
-  font-size: 11px;
-  text-shadow: 0 0 6px rgba(0,0,0,.9);
-  pointer-events: none;
+.label-comune{
+ color:#fff;
+ font-size:11px;
+ text-shadow:0 0 6px rgba(0,0,0,.9);
+ pointer-events:none
 }
 
-.leaflet-interactive { cursor:pointer }
+/* banner */
+#banner{
+ position:fixed;
+ top:0;left:50%;
+ transform:translateX(-50%);
+ background:rgba(0,0,0,.85);
+ padding:10px 20px;
+ border-bottom:3px solid #00ff9c;
+ color:#fff;
+ display:none;
+ z-index:9999
+}
+
+.leaflet-interactive{cursor:pointer}
 </style>
 </head>
 
 <body>
-
 <div id="map"></div>
+<div id="banner"></div>
 
 <div id="hud">
   <div class="hud-title" id="hudTitle">Provincia di Verona</div>
   <div class="hud-sub" id="hudSub">Vista generale</div>
 
-  <div id="stats">
-    <div class="stat stat-ok">
-      <div class="stat-title">Comuni coperti</div>
-      <div class="stat-value" id="cntOk">0</div>
-    </div>
-    <div class="stat stat-warn">
-      <div class="stat-title">Comuni orfani</div>
-      <div class="stat-value" id="cntOrfani">0</div>
-    </div>
+  <div class="buttons">
+    <button id="btnAdd">Aggiungi referente</button>
+    <button id="btnToggle">Vedi referenti</button>
   </div>
+  <div id="refPanel"><ul id="refList"></ul></div>
 
-  <!-- FARMACIE -->
-  <div id="farm-box">
-    <h4>Farmacie (comune selezionato)</h4>
-    <div id="farm-count">0 farmacie</div>
+  <!-- LEGENDA -->
+  <div class="section legend">
+    <h4>Legenda – Stato</h4>
+    <div class="legend-row"><span class="dot partecipa"></span> Partecipa</div>
+    <div class="legend-row"><span class="dot trattativa"></span> In trattativa</div>
+    <div class="legend-row"><span class="dot contattare"></span> Da contattare</div>
+    <div class="legend-row"><span class="dot rifiuta"></span> Rifiuta</div>
 
-    <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
-    <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
-    <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
-    <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
-  </div>
-
-  <div class="hud-buttons">
-    <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
-    <button class="hud-btn" id="btnToggle">Vedi referenti</button>
-  </div>
-
-  <div class="hud-section" id="refPanel">
-    <ul id="refList"></ul>
+    <h4>Legenda – Tipologia</h4>
+    <div class="legend-row"><span class="dot partecipa"></span> Farmacia privata</div>
+    <div class="legend-row"><span class="triangle partecipa"></span> Farmacia comunale</div>
+    <div class="legend-row"><span class="cross partecipa">✚</span> MMG / Studio associato</div>
   </div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
-/* MAPPA BASE */
-const map = L.map('map',{ attributionControl:false })
-  .setView([45.43,10.99],10);
+/* MAPPA */
+const map=L.map('map',{attributionControl:false})
+  .setView([45.43,10.99],10)
 
 L.tileLayer(
-  'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
-  { maxZoom:18 }
-).addTo(map);
+ 'https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png',
+ {maxZoom:18}
+).addTo(map)
 
-/* DATI IN MEMORIA (provvisori) */
-const referenti = {
-  "Verona": ["Vincenzo R."]
-};
+/* DATI */
+const referenti={"Verona":["Vincenzo R."]}
 
-const farmacie = [
-  {
-    nome:"Farmacia Centrale",
-    comune:"Verona",
-    lat:45.438,
-    lng:10.992,
-    tipo:"privata",
-    stato:"accetta",
-    indirizzo:"Via Roma 1",
-    tel:"045 0000001",
-    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Centrale+Verona"
-  },
-  {
-    nome:"Farmacia San Zeno",
-    comune:"Verona",
-    lat:45.443,
-    lng:10.980,
-    tipo:"comunale",
-    stato:"in_trattativa",
-    indirizzo:"Piazza Corrubbio",
-    tel:"045 0000002",
-    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+San+Zeno+Verona"
-  },
-  {
-    nome:"Farmacia Borgo Roma",
-    comune:"Verona",
-    lat:45.389,
-    lng:10.982,
-    tipo:"privata",
-    stato:"da_contattare",
-    indirizzo:"Via Centro 12",
-    tel:"045 0000003",
-    maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Borgo+Roma+Verona"
-  }
-];
+const farmacie=[
+ {
+  nome:"Farmacia Centrale",
+  comune:"Verona",
+  lat:45.438,
+  lng:10.992,
+  tipo:"privata",
+  stato:"partecipa",
+  indirizzo:"Via Roma 1",
+  maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+Centrale+Verona"
+ },
+ {
+  nome:"Farmacia San Zeno",
+  comune:"Verona",
+  lat:45.443,
+  lng:10.98,
+  tipo:"comunale",
+  stato:"trattativa",
+  indirizzo:"Piazza Corrubbio",
+  maps:"https://www.google.com/maps/search/?api=1&query=Farmacia+San+Zeno+Verona"
+ }
+]
 
-let labels = [];
-let comuni = [];
-let selectedLayer = null;
-let refVisibili = false;
-let farmLayer = L.layerGroup().addTo(map);
+let layers={},labels=[],selected=null
+const farmLayer=L.layerGroup().addTo(map)
 
-/* nuovi: mappa comune -> layer per aggiornare colore quando aggiungo referenti */
-const comuneLayers = {};
+const hudTitle=document.getElementById('hudTitle')
+const hudSub=document.getElementById('hudSub')
+const banner=document.getElementById('banner')
+const refPanel=document.getElementById('refPanel')
+const refList=document.getElementById('refList')
 
-/* RIFERIMENTI HUD */
-const hudTitle   = document.getElementById('hudTitle');
-const hudSub     = document.getElementById('hudSub');
-const refPanel   = document.getElementById('refPanel');
-const refList    = document.getElementById('refList');
-const btnToggle  = document.getElementById('btnToggle');
-const farmCountEl= document.getElementById('farm-count');
-
-const nomeComune = p => p.nome || p.DENOM_COM || p.name || 'Comune';
-const hasRef     = n => referenti[n] && referenti[n].length>0;
-
-/* aggiorna stile di UN comune in base ai referenti */
-function updateComuneStyle(nome) {
-  const layer = comuneLayers[nome];
-  if (!layer) return;
-  const baseColor = hasRef(nome) ? '#00ff9c' : '#ffaa00';
-  const isSelected = (selectedLayer === layer);
-  layer.setStyle({
-    color: isSelected ? '#ffffff' : baseColor,
-    weight: isSelected ? 3 : 1,
-    fillOpacity: 0
-  });
-}
-
-/* reset selezione */
-function resetSelezione(){
-  if(selectedLayer){
-    const prevName = nomeComune(selectedLayer.feature.properties);
-    selectedLayer = null;
-    updateComuneStyle(prevName);
-  }
-  hudTitle.innerText = 'Provincia di Verona';
-  hudSub.innerText   = 'Vista generale';
-  farmLayer.clearLayers();
-  farmCountEl.innerText = '0 farmacie';
-  refPanel.style.display = 'none';
-  refVisibili = false;
-  btnToggle.innerText = 'Vedi referenti';
-  aggiornaLabels();
-}
-
-/* AGGIORNA LABELS IN BASE ALLO ZOOM E SELEZIONE */
-function aggiornaLabels(){
-  const z = map.getZoom();
-  labels.forEach(l => {
-    if(!selectedLayer && z >= 9 && z <= 12){
-      if(!map.hasLayer(l)) map.addLayer(l);
-    } else {
-      if(map.hasLayer(l)) map.removeLayer(l);
-    }
-  });
-}
+const nomeComune=p=>p.nome||p.DENOM_COM||p.name||'Comune'
+const hasRef=n=>referenti[n]&&referenti[n].length>0
 
 /* COMUNI */
 fetch('data/comuni_verona.json')
-  .then(r => r.json())
-  .then(data => {
+.then(r=>r.json())
+.then(data=>{
+ const geo=L.geoJSON(data,{
+  style:f=>{
+   const n=nomeComune(f.properties)
+   return{
+    color:hasRef(n)?'#00ff9c':'#ffaa00',
+    fillOpacity:hasRef(n)?0.12:0,
+    weight:1
+   }
+  },
+  onEachFeature:(f,l)=>{
+   const n=nomeComune(f.properties)
+   layers[n]=l
 
-    const layer = L.geoJSON(data,{
-      style: f => {
-        const n = nomeComune(f.properties);
-        if(!comuni.includes(n)) comuni.push(n);
-        const baseColor = hasRef(n) ? '#00ff9c' : '#ffaa00';
-        return {
-          color: baseColor,
-          weight: 1,
-          fillOpacity: 0
-        };
-      },
-      onEachFeature:(f,layer) => {
-        const nome = nomeComune(f.properties);
-        comuneLayers[nome] = layer;
+   const lab=L.marker(l.getBounds().getCenter(),{
+    icon:L.divIcon({className:'label-comune',html:n})
+   }).addTo(map)
+   labels.push(lab)
 
-        const center = layer.getBounds().getCenter();
-        const label = L.marker(center,{
-          icon: L.divIcon({
-            className:'label-comune',
-            html: nome,
-            iconSize:[120,16]
-          }),
-          interactive:false
-        });
-        labels.push(label);
-        label.addTo(map);
+   l.on('click',()=>{
+    selected=n
+    map.fitBounds(l.getBounds(),{padding:[50,50]})
+    labels.forEach(x=>map.removeLayer(x))
 
-        layer.on('click', () => selezionaComune(layer,nome));
-      }
-    }).addTo(map);
+    hudTitle.textContent='Comune di '+n
+    hudSub.textContent=hasRef(n)
+      ?'Referenti: '+referenti[n].length
+      :'⚠ Comune orfano'
 
-    map.fitBounds(layer.getBounds());
-    aggiornaContatori();
-    aggiornaLabels();
+    banner.style.display='block'
+    banner.innerHTML='↑ Comune di <b>'+n+
+      '</b> – Referenti: '+(referenti[n]?.length||0)
 
-    map.on('zoomend', () => {
-      const z = map.getZoom();
-      if(selectedLayer && z < 9.5){
-        resetSelezione();
-      } else {
-        aggiornaLabels();
-      }
-    });
-  });
-
-/* SELEZIONE COMUNE */
-function selezionaComune(layer,nome){
-  if(selectedLayer){
-    const prev = nomeComune(selectedLayer.feature.properties);
-    selectedLayer = null;
-    updateComuneStyle(prev);
+    mostraFarmacie(n)
+   })
   }
+ }).addTo(map)
 
-  selectedLayer = layer;
-  updateComuneStyle(nome);
+ map.fitBounds(geo.getBounds())
 
-  map.fitBounds(layer.getBounds(),{ padding:[40,40] });
+ map.on('zoomend',()=>{
+  if(map.getZoom()<9.5){
+   selected=null
+   banner.style.display='none'
+   labels.forEach(l=>map.addLayer(l))
+   hudTitle.textContent='Provincia di Verona'
+   hudSub.textContent='Vista generale'
+   farmLayer.clearLayers()
+  }
+ })
+})
 
-  hudTitle.innerText = 'Comune di ' + nome;
-  hudSub.innerText   = hasRef(nome)
-    ? 'Referenti presenti: ' + referenti[nome].length
-    : '⚠ Comune orfano';
-
-  // nascondi labels quando sto lavorando sul singolo comune
-  labels.forEach(l => { if(map.hasLayer(l)) map.removeLayer(l); });
-
-  mostraFarmacie(nome);
+/* FARMACIE */
+function simboloFarmacia(f){
+ if(f.tipo==="privata"){
+  return `<div class="dot ${f.stato}"></div>`
+ }
+ return `<div class="triangle ${f.stato}"></div>`
 }
 
-/* FARMACIE PER COMUNE */
 function mostraFarmacie(comune){
-  farmLayer.clearLayers();
-  const vis = farmacie.filter(f => f.comune === comune);
-  farmCountEl.innerText = vis.length + ' farmacie';
-
-  vis.forEach(f => {
-    const simbolo = f.tipo === 'privata'
-      ? `<div class="dot ${f.stato}"></div>`
-      : `<div class="triangle ${f.stato}"></div>`;
-
-    const popupHtml = `
-      <strong>${f.nome}</strong><br/>
-      ${f.tipo} – ${f.indirizzo}<br/>
-      Tel: ${f.tel}<br/>
-      <a href="${f.maps}" target="_blank">Apri in Maps</a><br/>
-      <a href="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm" target="_blank">
-        Materiali campagna
-      </a>
-    `;
-
-    const m = L.marker([f.lat,f.lng],{
-      icon: L.divIcon({ html: simbolo, iconSize:[14,14], className:'' })
-    }).bindPopup(popupHtml);
-
-    farmLayer.addLayer(m);
-  });
+ farmLayer.clearLayers()
+ farmacie.filter(f=>f.comune===comune).forEach(f=>{
+  const popup=`
+   <strong>${f.nome}</strong><br>
+   ${f.tipo}<br>
+   ${f.indirizzo}<br>
+   <a href="${f.maps}" target="_blank">Apri in Google Maps</a><br>
+   <a href="https://drive.google.com/drive/folders/1f9JTPwuquc1epCO6rpsONh2fFes8yabm" target="_blank">
+    Materiali campagna
+   </a>
+  `
+  L.marker([f.lat,f.lng],{
+   icon:L.divIcon({html:simboloFarmacia(f),iconSize:[14,14]})
+  }).bindPopup(popup).addTo(farmLayer)
+ })
 }
 
-/* CONTATORI COMUNI */
-function aggiornaContatori(){
-  const ok     = comuni.filter(n => hasRef(n)).length;
-  const orfani = comuni.length - ok;
-  document.getElementById('cntOk').innerText     = ok;
-  document.getElementById('cntOrfani').innerText = orfani;
+/* REFERENTI */
+btnAdd.onclick=()=>{
+ if(!selected)return alert('Seleziona un comune')
+ const n=prompt('Nome referente')
+ if(!n)return
+ if(!referenti[selected])referenti[selected]=[]
+ referenti[selected].push(n)
+ layers[selected].setStyle({color:'#00ff9c',fillOpacity:0.12})
+ hudSub.textContent='Referenti: '+referenti[selected].length
+ banner.innerHTML='↑ Comune di <b>'+selected+
+  '</b> – Referenti: '+referenti[selected].length
 }
 
-/* REFERENTI: AGGIUNGI */
-document.getElementById('btnAdd').onclick = () => {
-  if(!selectedLayer){
-    alert('Seleziona prima un comune sulla mappa');
-    return;
-  }
-  const nomeComuneSel = hudTitle.innerText.replace('Comune di ','');
-  const n = prompt('Inserisci il tuo nome (verrà mostrato come referente)');
-  if(!n) return;
-  if(!referenti[nomeComuneSel]) referenti[nomeComuneSel] = [];
-  referenti[nomeComuneSel].push(n);
-
-  hudSub.innerText = 'Referenti presenti: ' + referenti[nomeComuneSel].length;
-
-  // aggiorna colore del comune e contatori globali
-  updateComuneStyle(nomeComuneSel);
-  aggiornaContatori();
-
-  if(refVisibili) mostraReferenti(nomeComuneSel);
-};
-
-/* REFERENTI: TOGGLE VEDI/NASCONDI */
-document.getElementById('btnToggle').onclick = () => {
-  refVisibili = !refVisibili;
-  btnToggle.innerText = refVisibili ? 'Nascondi referenti' : 'Vedi referenti';
-
-  if(refVisibili && selectedLayer){
-    const nomeComuneSel = hudTitle.innerText.replace('Comune di ','');
-    mostraReferenti(nomeComuneSel);
-  } else {
-    refPanel.style.display = 'none';
-  }
-};
-
-function mostraReferenti(nome){
-  refList.innerHTML = '';
-  const lista = referenti[nome] || [];
-  lista.forEach(r => {
-    const li = document.createElement('li');
-    li.textContent = r;
-    refList.appendChild(li);
-  });
-  refPanel.style.display = lista.length ? 'block' : 'none';
+btnToggle.onclick=()=>{
+ if(!selected)return
+ refPanel.style.display=
+  refPanel.style.display==='block'?'none':'block'
+ refList.innerHTML=''
+ referenti[selected].forEach(r=>{
+  const li=document.createElement('li')
+  li.textContent=r
+  refList.appendChild(li)
+ })
 }
 </script>
-
 </body>
 </html>
