--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui, sans
 #farm-box h4{
   margin:0 0 6px;
   font-size:11px; text-transform:uppercase; letter-spacing:.12em;
-  color:#9ef5d9;
+  color:#99f5d9;
 }
 #farm-count, #mmg-count{ font-size:12px; margin-bottom:0; color:#e6e6e6; }
 
@@ -113,7 +113,7 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui, sans
 .mrk{ width:14px; height:14px; display:flex; align-items:center; justify-content:center; }
 .mrk.dot{ border-radius:50%; }
 
-/* buttons referenti (sticky in basso nel HUD) */
+/* buttons referenti */
 .hud-buttons{
   margin-top:12px;
   display:flex; gap:6px; flex-wrap:wrap;
@@ -128,12 +128,7 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui, sans
   font-size:11px; padding:8px 10px; cursor:pointer;
 }
 .hud-btn:hover{ background:#00ff9c; color:#00110b; }
-
-.hud-section{
-  margin-top:8px;
-  display:none;
-  padding: 6px 0 0;
-}
+.hud-section{ margin-top:8px; display:none; padding: 6px 0 0; }
 .hud-section li{ font-size:12px; color:#fff; }
 .hud-empty{ font-size:12px; color:#bdbdbd; padding: 6px 0 2px; }
 
@@ -202,8 +197,8 @@ html, body { margin:0; height:100%; background:#000; font-family:system-ui, sans
     <div class="legend-row"><span class="square leg-orfano"></span> Comune orfano (bordo tratteggiato)</div>
 
     <h4>Legenda farmacie</h4>
-    <div class="legend-row"><span class="dot contattare"></span> Privata – (stato lavoro: default “da contattare”)</div>
-    <div class="legend-row"><span class="triangle contattare"></span> Comunale – (stato lavoro: default “da contattare”)</div>
+    <div class="legend-row"><span class="dot contattare"></span> Privata (marker tondo)</div>
+    <div class="legend-row"><span class="triangle contattare"></span> Comunale (marker triangolo)</div>
 
     <h4>Nota attività</h4>
     <div class="legend-row"><span class="square" style="background:#666"></span> “chiusa_temporaneamente” = marker semi-trasparente</div>
@@ -266,9 +261,9 @@ let selectedZoomRef = null;
 
 /* markers */
 const farmLayer = L.layerGroup().addTo(map);
-const farmMarkers = [];   // {marker, comune}
+const farmMarkers = []; // {marker, comune, isChiusa, baseOpacity}
 
-/* stats file (atteso per comune) */
+/* stats file (QC) */
 const statsFarmByComune = {}; // canonComune -> {n_farmacie, n_chiuse_temporanee, n_link_share}
 
 /* ===============================
@@ -294,11 +289,11 @@ function aggiornaContatoriGlobali(){
   const comuni = Array.from(comuniSet);
   const coperti = comuni.filter(n => hasRef(n)).length;
   const orfani = comuni.length - coperti;
+
   document.getElementById('cntOk').innerText = coperti;
   document.getElementById('cntOrfani').innerText = orfani;
   document.getElementById('cntFarm').innerText = farmMarkers.length;
 
-  // chiuse temp da markers (non dallo stats, così controlli se le stai caricando davvero)
   const chiuse = farmMarkers.reduce((acc, x) => acc + (x.isChiusa ? 1 : 0), 0);
   document.getElementById('cntChiuse').innerText = chiuse;
 }
@@ -477,10 +472,10 @@ function fixLatLng(lat, lon){
 }
 
 /* ===============================
-   MARKER ICONS (solo gestione per ora)
+   MARKER ICONS (gestione)
 ================================ */
 function iconFarmacia(gestione, statoLavoro){
-  const cls = (statoLavoro || 'contattare'); // status lavoro arriverà dopo con status.csv
+  const cls = (statoLavoro || 'contattare');
   const g = (gestione || '').toString().toLowerCase();
   const isComunale = g.includes('comunal');
   if(isComunale){
@@ -490,7 +485,47 @@ function iconFarmacia(gestione, statoLavoro){
 }
 
 /* ===============================
-   CARICA COMUNI (GEOJSON)
+   MAPS URL PICKER
+   Regola operativa:
+   - Popup: usa SEMPRE maps_share_url se c'è
+   - Poi maps_url
+   - Poi maps_url_addr
+   - Poi maps_url_coords (solo fallback tecnico)
+   - Ultimo fallback: query da indirizzo con "farmacia"/"dispensario"
+================================ */
+function safeStr(x){ return (x===null || x===undefined) ? '' : String(x).trim(); }
+function ensureHttp(u){
+  if(!u) return '';
+  if(/^https?:\/\//i.test(u)) return u;
+  // es: maps.app.goo.gl/...
+  return 'https://' + u.replace(/^\/+/, '');
+}
+function mapsUrlFallbackFromAddress(nome, indirizzoFull, comune, tipologia){
+  const t = (tipologia || '').toLowerCase();
+  const keyword = t.includes('dispens') ? 'dispensario' : 'farmacia';
+  const q = `${keyword} ${nome || ''} ${indirizzoFull || ''} ${comune || ''} Verona Italia`.trim().replace(/\s+/g,' ');
+  return `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(q)}`;
+}
+function pickMapsUrl(row, fixed, nome, indirizzoFull, comune, tipologia){
+  const share = ensureHttp(safeStr(row.maps_share_url));
+  if(share) return share;
+
+  const u1 = ensureHttp(safeStr(row.maps_url));
+  if(u1) return u1;
+
+  const u2 = ensureHttp(safeStr(row.maps_url_addr));
+  if(u2) return u2;
+
+  const u3 = ensureHttp(safeStr(row.maps_url_coords));
+  if(u3) return u3;
+
+  // ultimo fallback
+  return mapsUrlFallbackFromAddress(nome, indirizzoFull, comune, tipologia) ||
+         `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(fixed.lat + ',' + fixed.lon)}`;
+}
+
+/* ===============================
+   LOAD: COMUNI
 ================================ */
 fetch('data/comuni_verona.json')
   .then(r => r.json())
@@ -529,13 +564,11 @@ fetch('data/comuni_verona.json')
       aggiornaLabels();
     });
 
-    // carico stats (QC) e poi farmacie
     caricaStatsFarmaciePerComune(() => caricaFarmacieCSV());
   });
 
 /* ===============================
-   STATS (QC) – farmacie_stats_comune.csv
-   colonne: comune, n_farmacie, n_chiuse_temporanee, n_link_share
+   LOAD: STATS QC – farmacie_stats_comune.csv
 ================================ */
 function toInt(x){
   const n = parseInt(String(x ?? '').trim(), 10);
@@ -555,15 +588,12 @@ function caricaStatsFarmaciePerComune(doneCb){
         const canon = canonComune(comuneRaw);
 
         const nFarm = toInt(r.n_farmacie);
-        const nChiuse = toInt(r.n_chiuse_temporanee);
-        const nShare = toInt(r.n_link_share);
-
         if(nFarm === null) return;
 
         statsFarmByComune[canon] = {
           n_farmacie: nFarm,
-          n_chiuse_temporanee: (nChiuse ?? 0),
-          n_link_share: (nShare ?? 0),
+          n_chiuse_temporanee: (toInt(r.n_chiuse_temporanee) ?? 0),
+          n_link_share: (toInt(r.n_link_share) ?? 0),
         };
         loaded++;
       });
@@ -578,13 +608,11 @@ function caricaStatsFarmaciePerComune(doneCb){
 }
 
 /* ===============================
-   CARICA FARMACIE – farmacie.csv (nuovo)
+   LOAD: FARMACIE – farmacie.csv (nuovo)
    Regola:
    - Marker: SOLO da lat/lon
-   - Link popup: SOLO maps_url (fallback: maps_url_addr, poi maps_url_coords)
+   - Popup: link da maps_share_url (preferito) → maps_url → maps_url_addr → maps_url_coords → fallback query
 ================================ */
-function safeStr(x){ return (x===null || x===undefined) ? '' : String(x).trim(); }
-
 function caricaFarmacieCSV(){
   Papa.parse('data/farmacie.csv', {
     download: true,
@@ -596,6 +624,7 @@ function caricaFarmacieCSV(){
       const unrecognizedComuni = new Set();
       const idsDup = new Set();
       const idsSeen = new Set();
+      let shareUsed = 0;
 
       rows.forEach(row => {
         const comuneRaw = safeStr(row.comune);
@@ -622,15 +651,13 @@ function caricaFarmacieCSV(){
         if(fixed.swapped) swapped++;
         if(fixed.outOfRange) outRange++;
 
-        // link popup SOLO maps_url (fallback tecnico, se manca)
-        const linkMaps = safeStr(row.maps_url) || safeStr(row.maps_share_url) || safeStr(row.maps_url_addr) || safeStr(row.maps_url_coords) ||
-          `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent((nome ? nome+' ' : '') + fixed.lat + ',' + fixed.lon)}`;
+        const linkMaps = pickMapsUrl(row, fixed, nome, indirizzo, comune, tipologia);
+        if(safeStr(row.maps_share_url)) shareUsed++;
 
         const key = `pharm::${id || (nome + '|' + indirizzo + '|' + comune)}`;
         const statoLavoro = (statusRAM[key]?.stato) || 'contattare';
 
         const isChiusa = (statoAttivita === 'chiusa_temporaneamente');
-
         const warnChiusa = isChiusa
           ? `<div style="margin-top:8px;color:#ffaa00;font-size:12px"><b>⚠ CHIUSA TEMPORANEAMENTE</b></div>`
           : '';
@@ -666,19 +693,6 @@ function caricaFarmacieCSV(){
 
       aggiornaContatoriGlobali();
 
-      if(selectedNome){
-        farmMarkers.forEach(x => x.marker.setOpacity(x.comune === selectedNome ? x.baseOpacity : 0.18));
-        const real = farmMarkers.filter(x => x.comune === selectedNome).length;
-        const chiuse = farmMarkers.filter(x => x.comune === selectedNome && x.isChiusa).length;
-        const st = statsFarmByComune[selectedNome] || null;
-        const expected = st ? st.n_farmacie : null;
-        const linkShare = st ? st.n_link_share : null;
-        let line = (expected !== null) ? `Farmacie: ${real} / ${expected} (reale/atteso)` : `Farmacie: ${real}`;
-        if(chiuse) line += ` • chiuse temp: ${chiuse}`;
-        if(linkShare !== null) line += ` • link share ok: ${linkShare}`;
-        farmCountEl.innerText = line;
-      }
-
       // mismatch atteso vs reale (top 6)
       const realByComune = {};
       farmMarkers.forEach(x => { realByComune[x.comune] = (realByComune[x.comune] || 0) + 1; });
@@ -693,11 +707,12 @@ function caricaFarmacieCSV(){
 
       let msg =
         `Farmacie caricate: ${added} (saltate: ${skipped})` +
-        (swapped ? ` — invertite corrette: ${swapped}` : '') +
-        (outRange ? ` — fuori range: ${outRange}` : '');
+        (shareUsed ? `\nLink share (maps.app.goo.gl) usati: ${shareUsed}` : '') +
+        (swapped ? `\nInvertite corrette: ${swapped}` : '') +
+        (outRange ? `\nFuori range: ${outRange}` : '');
 
       if(noComuneMatch){
-        msg += `\n⚠ Comuni non riconosciuti dal GeoJSON: ${noComuneMatch}`;
+        msg += `\n⚠ Comuni NON riconosciuti dal GeoJSON: ${noComuneMatch}`;
         const ex = Array.from(unrecognizedComuni).slice(0, 8);
         if(ex.length) msg += `\nEsempi: ${ex.join(' | ')}${unrecognizedComuni.size > ex.length ? ' | …' : ''}`;
       }
@@ -712,6 +727,11 @@ function caricaFarmacieCSV(){
       }
 
       geoProgress.textContent = msg;
+
+      // se c'è già un comune selezionato, aggiorna riga comune
+      if(selectedNome && layersByNome[selectedNome]){
+        selezionaComune(layersByNome[selectedNome], selectedNome);
+      }
     }
   });
 }
